--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </tr>
                         </tr>
                         <tr>
-                            <td>Programming</td>  <td>⭐️⭐️⭐️</td> 
+                            <td>Programming</td>  <td>⭐️</td> 
                         </tr>
                 </table>
 
