--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <div class="skill-row">
                 <img class="computer-image" src="https://media2.giphy.com/media/lRLzrbhmh5pFf4jOga/giphy.gif?cid=ecf05e47rzxqsid43rojaihmds0ptwlxo9ktyxxy9cy1tvke&rid=giphy.gif&ct=s" alt="comouter">
                 <h3 class="a">Web Developer</h3>
-                <p class="b">I'm the begginer of making a Website.</p>
+                <p class="b">I'm a begginer of making a Website.</p>
               </div>
             </div>
            
